# veil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: build.yml
veil-app/: package-lock.json  package.json
veil-app/android/: AndroidManifest-additions.xml  VeilVpnService.kt  patch.sh
veil-app/src/: app.js  index.html  style.css
veil-app/src-tauri/: Cargo.toml  tauri.conf.json
veil-app/src-tauri/icons/: icon.icns
veil-app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs  vpn_android.rs
veil-client/: Cargo.toml
veil-client/src/: config.rs  lib.rs  main.rs
veil-client/src/deploy/: mod.rs  ssh.rs
veil-client/src/dns/: mod.rs
veil-client/src/killswitch/: mod.rs
veil-client/src/modes/: mod.rs  proxy.rs  vpn.rs
veil-client/src/transport/: mod.rs
veil-client/src/tui/: mod.rs
veil-client/src/tunnel/: mod.rs
veil-core/: Cargo.toml
veil-core/src/: config.rs  error.rs  lib.rs
veil-core/src/crypto/: mod.rs  token.rs
veil-core/src/protocol/: frame.rs  handshake.rs  mod.rs  session.rs
veil-server/: Cargo.toml  Dockerfile  config.example.toml
veil-server/src/: config.rs  main.rs
veil-server/src/admin/: mod.rs
veil-server/src/auth/: mod.rs
veil-server/src/obfuscation/: mod.rs
veil-server/src/relay/: mod.rs  tcp_relay.rs  udp_relay.rs
veil-server/src/transport/: mod.rs  quic.rs  tls_tcp.rs
