[workspace]
members = [
    "veil-core",
    "veil-server",
    "veil-client",
    "veil-app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Veil Project"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# QUIC / HTTP3
quinn = { version = "0.11" }
h3 = { version = "0.0.8" }
h3-quinn = { version = "0.0.10" }

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["pem"] }
webpki-roots = "0.26"

# HTTP / Web
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Cryptography
ring = "0.17"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# Networking
socket2 = { version = "0.5", features = ["all"] }
ipnet = { version = "2", features = ["serde"] }
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "dns-over-https-rustls", "dns-over-rustls"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
anyhow = "1"
thiserror = "1"

# Config
config = "0.14"
dirs = "5"

# Async traits
async-trait = "0.1"
futures = "0.3"
bytes = "1"

# SSH (for server deployment)
ssh2 = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }
