[package]
name = "veil-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "veil"
path = "src/main.rs"

[dependencies]
veil-core = { path = "../veil-core" }

tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
ipnet = { workspace = true }
ssh2 = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rpassword = "7"

# TUN interface (cross-platform)
[target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.6", features = ["async"] }

[target.'cfg(target_os = "macos")'.dependencies]
tun = { version = "0.6", features = ["async"] }

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.4"
