[package]
name = "veil-client"
version.workspace = true
edition.workspace = true

[lib]
name = "veil_client"
path = "src/lib.rs"

[[bin]]
name = "veil"
path = "src/main.rs"

[dependencies]
veil-core = { path = "../veil-core" }

tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
ipnet = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rpassword = "7"

# TUN interface (cross-platform desktop)
[target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.6", features = ["async"] }

[target.'cfg(target_os = "macos")'.dependencies]
tun = { version = "0.6", features = ["async"] }

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.4"

# Desktop-only deployment support
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
ssh2 = { workspace = true }

# Android: JNI for VpnService fd callback + libc for fd flags
[target.'cfg(target_os = "android")'.dependencies]
jni   = { workspace = true }
libc  = "0.2"
